# omr-demonstrator

./: .gitignore  .tasks  .vimrc  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  omr-demonstratorui.rc
tests/: CMakeLists.txt
